# Smart-Garden

./: README.md
esp32-firmware/smart-garden/: CMakeLists.txt
esp32-firmware/smart-garden/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
esp32-firmware/smart-garden/main/src/: camera.c  camera.h  gpio.c  gpio.h  http.c  http.h  sensor_data.c  sensor_data.h  temperature.c  temperature.h  water_sensor.c  water_sensor.h  websocket_client.c  websocket_client.h  wifi.c  wifi.h
python/: image_test.py  websocket_client_test.py  websocket_test.py
web-interface/: data_handler.js  index.html
